// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for edit locations: alias field 1`] = `
<input
  class="ant-input css-dev-only-do-not-override-k7429z"
  id="alias"
  placeholder="Enter team alias"
  type="text"
  value=""
/>
`;

exports[`renders correctly for edit locations: name field 1`] = `
<input
  aria-required="true"
  class="ant-input css-dev-only-do-not-override-k7429z"
  id="name"
  placeholder="Enter team name"
  type="text"
  value="OpenSRP web Test Organisation"
/>
`;

exports[`renders correctly for new organizations: alias field 1`] = `
<input
  class="ant-input css-dev-only-do-not-override-k7429z"
  id="alias"
  placeholder="Enter team alias"
  type="text"
  value=""
/>
`;

exports[`renders correctly for new organizations: name field 1`] = `
<input
  aria-required="true"
  class="ant-input css-dev-only-do-not-override-k7429z"
  id="name"
  placeholder="Enter team name"
  type="text"
  value=""
/>
`;
